--- a/portifolio.html
+++ b/portifolio.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>lucascabrita</title>
 </head>
 <body>
+    <h1>Lucas dos Santos Cabrita</h1>
+    <img src="minha foto.jpeg" alt="">
     
 </body>
 </html>
