--- a/portifolio.html
+++ b/portifolio.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Lucas dos Santos Cabrita</h1>
     <img src="minha foto.jpeg" alt="">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque voluptatem nesciunt laborum eveniet. Fugit ab soluta dolores eveniet vitae reiciendis nesciunt ullam eius libero voluptatibus! Incidunt praesentium nostrum corrupti dolore.</p>
     
 </body>
 </html>
