--- a/portifolio.html
+++ b/portifolio.html
@@ -7,9 +7,10 @@
     <title>lucascabrita</title>
 </head>
 <body>
-    <h1>Lucas dos Santos Cabrita</h1>
-    <img src="minha foto.jpeg" alt="">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque voluptatem nesciunt laborum eveniet. Fugit ab soluta dolores eveniet vitae reiciendis nesciunt ullam eius libero voluptatibus! Incidunt praesentium nostrum corrupti dolore.</p>
-    
+    <div>
+        <h1>Lucas dos Santos Cabrita</h1>
+        <img src="minha foto.jpeg" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque voluptatem nesciunt laborum eveniet. Fugit ab soluta dolores eveniet vitae reiciendis nesciunt ullam eius libero voluptatibus! Incidunt praesentium nostrum corrupti dolore.</p>
+    </div>
 </body>
 </html>
