--- a/portifolio.html
+++ b/portifolio.html
@@ -8,5 +8,6 @@
 </head>
 <body>
         <h1>Lucas dos Santos Cabrita</h1>
+        <img src="minha foto.jpeg" alt="foto do meu rosto">
 </body>
 </html>
