--- a/portifolio.html
+++ b/portifolio.html
@@ -7,7 +7,8 @@
     <title>lucascabrita</title>
 </head>
 <body>
-        <h1>Lucas dos Santos Cabrita</h1>
-        <img src="minha foto.jpeg" alt="foto do meu rosto">
+    <h1>Lucas dos Santos Cabrita</h1>
+    <img src="minha foto.jpeg" alt="foto do meu rosto">
+    <p>Brasileiro nascido em Salvador-BA no dia 05/03/1998</p>
 </body>
 </html>
