--- a/portifolio.html
+++ b/portifolio.html
@@ -10,5 +10,13 @@
     <h1>Lucas dos Santos Cabrita</h1>
     <img src="minha foto.jpeg" alt="foto do meu rosto">
     <p>Brasileiro nascido em Salvador-BA no dia 05/03/1998</p>
+    <div>
+        <h2>Habilidades</h2>
+        <ul>
+            <li>Trabalho em equipe</li>
+            <li> <strong>Adepto a mudanças</strong></li>
+            <li>Comunicativo</li>
+        </ul>
+    </div>
 </body>
 </html>
