--- a/portifolio.html
+++ b/portifolio.html
@@ -19,5 +19,7 @@
         </ul>
     </div>
     <a href="minha foto.jpeg">minha foto</a>
+    <a target="_blank" href="https://www.google.com/">link externo</a>
+
 </body>
 </html>
