--- a/portifolio.html
+++ b/portifolio.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Lucas dos Santos Cabrita</h1>
     <img src="minha foto.jpeg" alt="foto do meu rosto">
+    <a href="#sobremim">sobre mim</a>
     <p>Brasileiro nascido em Salvador-BA no dia 05/03/1998</p>
     <div>
         <h2>Habilidades</h2>
@@ -18,8 +19,9 @@
             <li>Comunicativo</li>
         </ul>
     </div>
-    <a href="minha foto.jpeg">minha foto</a>
-    <a target="_blank" href="https://www.google.com/">link externo</a>
+    <a href="minha foto.jpeg">minha foto</a> </br>
+    <a target="_blank" href="https://www.google.com/">link externo</a></br>
+    <a href="#sobremim">Lucas</a>
 
 </body>
 </html>
